--- a/packages/src/components/emoji/Category/Category.module.css
+++ b/packages/src/components/emoji/Category/Category.module.css
@@ -1,19 +1,21 @@
 .section {
   display: grid;
-  grid-gap: 0.25rem; /* gap-1 */
+  grid-gap: 0.25rem;
   padding-right: 1rem;
 }
 
 .heading {
-  color: #6b7280; /* text-gray-500 */
-  font-size: 0.875rem; /* text-sm */
-  padding-left: 0.25rem; /* pl-1 */
-  padding-top: 0.5rem; /* pt-2 */
-  padding-bottom: 0.375rem; /* pb-1.5 */
+  color: #6b7280;
+  font-size: 0.875rem;
+  font-weight: 600;
+  padding-left: 0.25rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.375rem;
   position: sticky;
   top: 0;
-  background-color: rgba(255, 255, 255, 0.9); /* bg-white/90 */
-  backdrop-filter: blur(10px);
+  z-index: 1;
+  background-color: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(5px);
   transition: color 0.3s;
 }
 
@@ -23,13 +25,13 @@
 }
 
 .button {
-  padding: 0.125rem; /* p-0.5 */
-  border-radius: 0.375rem; /* rounded-md */
+  padding: 0.125rem;
+  border-radius: 0.375rem;
   transition: background-color 0.3s;
 }
 
 .button:hover {
-  background-color: #bfdbfe; /* hover:bg-blue-100 */
+  background-color: #bfdbfe;
 }
 
 .image {
